# smolvm

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Licenses.md  Makefile.toml  README.md  build.rs  flake.nix  index.html  smolvm.entitlements
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml
.github/workflows/: build-libkrun.yml  ci.yml  pacman-repo.yml  publish-crates.yml  release.yml  update-nix-flake.yml
Casks/: smolvm.rb
Formula/: smolvm.rb
apt/: Packages  index.html
crates/smolvm-agent/: Cargo.toml
crates/smolvm-agent/src/: console_socket.rs  container.rs  crun.rs  cuda.rs  dns_proxy.rs  docker_bridge.rs  image_archive.rs  main.rs  name.rs  oci.rs  paths.rs  pod.rs  process.rs  pty.rs  publish_socket.rs  retry.rs  rosetta.rs  ssh_agent.rs  storage.rs  timesync.rs  vsock.rs  waypipe.rs  x11.rs
crates/smolvm-agent/src/network/: linux.rs  mod.rs
crates/smolvm-cuda/: Cargo.toml  README.md
crates/smolvm-cuda-codegen/: Cargo.toml
crates/smolvm-cuda-guest/: Cargo.toml
crates/smolvm-cuda-guest/src/: main.rs
crates/smolvm-cuda-shim/: Cargo.toml  build.rs
crates/smolvm-cuda-shim/src/: driver_stubs.rs  lib.rs
crates/smolvm-cuda-shim/tests/: vecadd.c
crates/smolvm-cuda/examples/: gpu_loopback.rs  m1_route_probe.rs  m2_reconstruct_probe.rs  m3a_probe.rs  m3a_stream_probe.rs  path3_ipc_spike.rs  shim_server.rs
crates/smolvm-cuda/src/: client.rs  config.rs  host.rs  lib.rs  proto.rs  ring.rs  shm.rs
crates/smolvm-cuda/src/host/: gpu.rs
crates/smolvm-cudart-shim/: Cargo.toml  build.rs
crates/smolvm-cudart-shim/src/: cublas_stubs.rs  lib.rs
crates/smolvm-napi/: Cargo.toml  build.rs
crates/smolvm-network/: Cargo.toml
crates/smolvm-network/fuzz/: Cargo.toml
crates/smolvm-network/fuzz/fuzz_targets/: classify_guest_frame.rs
crates/smolvm-network/src/: dns.rs  dns_relay.rs  egress.rs  guest_env.rs  lib.rs  netns_tap.rs  policy.rs  stack.rs  tcp_listeners.rs  tcp_relay.rs  udp_relay.rs
crates/smolvm-nvml-shim/: Cargo.toml
crates/smolvm-nvml-shim/src/: lib.rs
crates/smolvm-pack/: Cargo.toml
crates/smolvm-pack/src/: assets.rs  detect.rs  extract.rs  format.rs  lib.rs  macho.rs  packer.rs  signing.rs
crates/smolvm-pack/tests/: shared_extract.rs
crates/smolvm-protocol/: Cargo.toml
crates/smolvm-protocol/src/: guest_env.rs  image_ref.rs  lib.rs  publish_socket.rs  retry.rs  secrets.rs
crates/smolvm-py/: Cargo.toml  build.rs
crates/smolvm-py/src/: lib.rs
crates/smolvm-registry/: Cargo.toml
crates/smolvm-shim/: Cargo.toml
crates/smolvm-shim/src/: backend.rs  bundle.rs  engine.rs  main.rs  service.rs  task.rs
crates/smolvm-smolfile/: Cargo.toml
crates/smolvm-smolfile/src/: lib.rs
crates/smolvm-stub/: Cargo.toml  build.rs
crates/smolvm-stub/src/: extract.rs  launch.rs  main.rs
demo/: BENCHMARKS.md  H100_SETUP.md  OPTIMIZATIONS.md  PERF-LOG.md  QA-LOG.md  QUICKSTART.md  REPRODUCIBILITY.md  TESTBED.md  dpo_train.py  qlora_train.py
demo/bench/: README.md  benchmark.sh  config.sh  make-baked.sh  run-containers.sh  run-smolvm.sh  summarize.py
demos/unsloth-fork-sweep/: README.md  demo-output.txt  demo.sh  workload.py
deploy/: README.md
deploy/k3s/: e2e-test.sh  install-smolvm-k3s.sh
deploy/kubernetes/: example-pod.yaml  runtimeclass.yaml
docs/: DEVELOPMENT.md  cross-os-smolmachine-validation.md  install-nix.md  lossless-serve-restart.md  native-display.md  network-virtio-policy-macos-plan.md
docs/cuda-fork-knowledge-base/: GPU-QA-LOG.md
examples/: README.md  doubledelete_test.rs  largeoutput_test.rs  orphan_test.rs  readfile_fix_test.rs  reattach_test.rs
examples/codex/: codex.smolfile
examples/cuda-pytorch/: Dockerfile  README.md  pytorch.smolfile
examples/docker-in-vm/: docker.smolfile
examples/doom-web/: doom.smolfile  index.html
examples/headless-browser/: README.md  browser.smolfile
examples/local-llm/: local-llm.smolfile
examples/node-app/: node.smolfile
examples/openclaw-app/: openclaw.smolfile
examples/pack-local-image/: Dockerfile  (+2 more)
lib/: libkrun.1.dylib  libkrun.dylib  libkrun.provenance  libkrunfw.5.dylib  libkrunfw.dylib  manifest.toml
nix/: libkrun.nix  libkrunfw.nix  smolvm.nix
pacman/: index.html
scripts/: build-agent-rootfs-ubuntu.sh  build-agent-rootfs.sh  build-dist-windows.sh  build-dist.sh  build-embedded-node.sh  build-embedded-python.sh  build-libkrun-linux.sh  check-krun-exports.sh  check-libkrun-glibc-floor.sh  check-secrets-guards.sh  cut-release.sh  ensure-libs.sh  install-k8s-runtime.sh  install-local.sh  install.sh  pack-local-image.sh  rebuild-agent.sh  smol-wrapper.sh  smolvm-display-wrapper.sh  smolvm-wrapper.sh  test-registry.sh  update-formula.sh
sdks/: README.md
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/examples/: basic.py  create_and_start.py
sdks/python/python/smolvm_embedded/: __init__.py  errors.py  machine.py  types.py
sdks/python/scripts/: build-current-platform.sh
src/: auth.rs  autostandby.rs  config.rs  consts.rs  control.rs  cuda_daemon.rs  cuda_host.rs  db.rs  disk_utils.rs  dns_filter.rs  dns_filter_listener.rs  egress_broker.rs  error.rs  handle.rs  image_archive.rs  lib.rs  local_image.rs  log_rotation.rs  main.rs  mount.rs  network.rs  pack_export.rs  process.rs  registry.rs  secrets.rs  settings.rs  smolfile.rs  smolvm.rs  storage.rs  systemd_scope.rs  util.rs  workload.rs
tests/: README.md  bench_container.sh  bench_vm_startup.sh  common.sh  idmap_e2e_boot.sh  idmap_mount.rs  run_all.sh  run_tests.sh  snapshot_capture_live.rs  test_api.sh  test_cli.sh  test_container.sh  test_db.sh  test_fork_base_guards.sh  test_gpu.sh  test_machine.sh  test_machine_bare.sh  test_machine_image.sh  test_machine_image_proc_storage.sh  test_machine_local_image.sh  test_machine_packed.sh  test_machine_run.sh  test_microvm.sh  test_network.sh  test_pack.sh  test_pack_registry.sh  test_ports.sh  test_reliability.sh  test_resize.sh  test_resources.sh  test_sandbox.sh  test_scale.sh  test_secrets.sh  test_smolfile.sh  test_storage.sh  test_virtio_net.sh  test_volumes.sh  test_wrapper.sh
yum/: index.html
(+222 files in other folders)
