[workspace]
members = [
    ".",
    "crates/smolvm-agent",
    "crates/smolvm-network",
    "crates/smolvm-pack",
    "crates/smolvm-protocol",
    "crates/smolvm-registry",
    "crates/smolvm-smolfile",
]
resolver = "2"

[package]
name = "smolvm"
version = "1.1.3"
edition = "2021"
description = "OCI-native microVM runtime"
license = "Apache-2.0"
repository = "https://github.com/smol-machines/smolvm"
keywords = ["microvm", "container", "virtualization"]
categories = ["virtualization", "command-line-utilities"]

[lib]
name = "smolvm"
path = "src/lib.rs"

[[bin]]
name = "smolvm"
path = "src/main.rs"

[dependencies]
smolvm-network = { path = "crates/smolvm-network", version = "1.1.3" }
smolvm-protocol = { path = "crates/smolvm-protocol", version = "1.1.3" }
smolvm-pack = { path = "crates/smolvm-pack", version = "1.1.3" }
smolvm-registry = { path = "crates/smolvm-registry", version = "1.1.3" }
smolfile = { path = "crates/smolvm-smolfile", version = "1.1.3" }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

base64 = { workspace = true }

# Secrets management. Resolved plaintext is scrubbed on drop; smolvm stores no
# secret material itself (refs only), so no at-rest crypto/store deps are needed.
zeroize = { version = "1", features = ["zeroize_derive"] }
humantime = "2"
tempfile = "3"

# HTTP API server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
# mTLS for the fleet serve API (control↔node). axum-server's rustls acceptor
# does the TLS handshake + client-cert verification; rustls-pemfile parses the
# CA/cert/key PEMs handed to us at enrollment.
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tokio-stream = "0.1"
parking_lot = "0.12"
async-stream = "0.3"
futures-util = "0.3"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
ipnet = "2.12.0"
metrics = "0.24"

metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Seccomp + Landlock for the VM boot subprocess (runtime isolation). Linux-only
# — macOS/HVF has neither; the code is cfg-gated to linux (seccomp also to x86_64).
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
smolvm-protocol = { path = "crates/smolvm-protocol", version = "1.1.3" }
regex = "1"

[build-dependencies]
pkg-config = "0.3"

[workspace.dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

# Release profile optimizations
[profile.release]
lto = true
codegen-units = 1
strip = true

# Smaller binary profile for agent (use with --profile release-small)
[profile.release-small]
inherits = "release"
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
panic = "abort"      # No unwinding - saves ~10% binary size
strip = true
