[package]
name = "smolvm-agent"
version = "0.6.4"
edition = "2021"
description = "Guest agent for smolvm VMs (handles OCI operations and command execution)"
license = "Apache-2.0"

[[bin]]
name = "smolvm-agent"
path = "src/main.rs"

[dependencies]
smolvm-network = { path = "../smolvm-network" }
smolvm-protocol = { path = "../smolvm-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
lazy_static = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
parking_lot = "0.12"
tempfile = "3"

# Linux-specific dependencies for vsock
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["socket", "fs"] }

[package.metadata]
# smolvm-agent only compiles and runs on Linux (inside the VM).
# Build using: ./scripts/rebuild-agent.sh

[target.'cfg(not(target_os = "linux"))'.dependencies]
# This crate does not support non-Linux targets.
# Attempting to compile it directly on other OS will produce errors.
# Use ./scripts/rebuild-agent.sh instead.
"smolvm-agent-is-linux-only-run-scripts-rebuild-agent-sh" = { version = "0.0.0" }
