[package]
name = "smolvm-agent"
version = "1.4.0"
edition = "2021"
description = "Guest agent for smolvm VMs (handles OCI operations and command execution)"
license = "Apache-2.0"
repository = "https://github.com/smol-machines/smolvm"

[[bin]]
name = "smolvm-agent"
path = "src/main.rs"

[dependencies]
smolvm-protocol = { path = "../smolvm-protocol", version = "1.4.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
lazy_static = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
parking_lot = "0.12"
tempfile = "3"
# Read OCI layer tars in-process so extraction can apply overlayfs whiteouts
# (gzip stays external via busybox `gunzip`, so no decompressor crate is added).
tar = "0.4"

# Linux-specific dependencies for vsock
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["socket", "fs"] }
# The new mount API (fsopen/fsconfig/fsmount/move_mount) for overlay mounts — lets
# us append each lower layer via `lowerdir+` instead of shelling out to `mount(8)`,
# whose `-o lowerdir=` value is capped at ~255 bytes. Already in the workspace lock.
rustix = { version = "1", features = ["mount", "fs"] }
