[package]
name = "smolvm-cuda"
version = "1.3.1"
edition = "2021"
description = "CUDA Driver-API remoting over vsock for smolvm guests"
license = "Apache-2.0"

[features]
# host: server-side dispatch + CPU emulation backend (std only).
# gpu:  real driver backend via libloading (implies host).
default = ["host", "gpu"]
host = []
gpu = ["host", "dep:libloading"]

[dependencies]
libloading = { version = "0.8", optional = true }
