[package]
name = "smolvm-cudart-shim"
version = "1.6.13"
edition = "2021"
description = "Guest-side libcudart.so drop-in: CUDA Runtime API lowered to smolvm's Driver-API vsock RPC"
license = "Apache-2.0"

[lib]
name = "cudart"
crate-type = ["cdylib"]

[dependencies]
smolvm-cuda = { path = "../smolvm-cuda", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"
libc = "0.2"
