[package]
name = "smolvm-network"
version = "1.4.0"
edition = "2021"
description = "Host-side virtio-net runtime for smolvm"
license = "Apache-2.0"
repository = "https://github.com/smol-machines/smolvm"

[dependencies]
crossbeam-queue = "0.3"
humantime = "2"
polling = "3"
smoltcp = { version = "0.13", default-features = false, features = [
    "std",
    "log",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    # Raw IP sockets capture the guest's ICMP echo traffic so the gateway can
    # relay ping to real host ICMP sockets (see `icmp_relay`).
    "socket-raw",
    # The gateway interface owns three addresses: IPv4, IPv6 ULA, and the
    # IPv6 link-local (default cap is 2).
    "iface-max-addr-count-3",
] }
socket2 = "0.6"
tracing = { workspace = true }

[features]
# Exposes fuzz-only entrypoints (e.g. fuzz_classify_guest_frame). Never enabled in normal builds.
fuzzing = []
