[package]
name = "smolvm-nvml-shim"
version = "1.6.13"
edition = "2021"
description = "Guest-side libnvidia-ml.so.1 drop-in: answers the NVML queries CUDA frameworks (vLLM) use for device detection, backed by the remoted CUDA driver"
license = "Apache-2.0"

[lib]
name = "nvidia_ml"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
