[package]
name = "smolvm-protocol"
version = "1.0.0"
edition = "2021"
description = "Protocol types for smolvm host-guest communication"
license = "Apache-2.0"
repository = "https://github.com/smol-machines/smolvm"

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
