[package]
name = "smolfile"
version = "1.1.3"
edition = "2021"
description = "Smolfile specification and parser for smolvm microVM workloads"
license = "Apache-2.0"
repository = "https://github.com/smol-machines/smolvm"
keywords = ["smolvm", "microvm", "configuration"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
smolvm-protocol = { path = "../smolvm-protocol", version = "1.1.3" }

[dev-dependencies]
tempfile = "3"
