[package]
name = "smolvm-stub"
version = "0.1.3"
edition = "2021"
description = "Stub executable for packed smolvm binaries"
license = "MIT OR Apache-2.0"

[[bin]]
name = "smolvm-stub"
path = "src/main.rs"

[dependencies]
smolvm-pack = { path = "../smolvm-pack" }
smolvm-protocol = { path = "../smolvm-protocol" }
clap = { version = "4", features = ["derive"] }
tar = "0.4"
zstd = "0.13"
libc = "0.2"
dirs = "5"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"
