[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "smolvm-embedded"
version = "0.1.0"
description = "Embedded Python SDK for smolvm"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "smol-machines" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[tool.maturin]
manifest-path = "../../crates/smolvm-py/Cargo.toml"
python-source = "python"
module-name = "smolvm_embedded._native"
