[package]
name = "smolvm-network-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.smolvm-network]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "classify_guest_frame"
path = "fuzz_targets/classify_guest_frame.rs"
test = false
doc = false
bench = false

[workspace]
